[project]
name = "cliff-openenv"
version = "0.1.0"
description = "Cliff Walking OpenEnv RL environment"
authors = [
    {name = "Minal Agrawal"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
